# molforge

./: .gitattributes  .gitignore  .pre-commit-config.yaml  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  docs.yml  nightly.yml  release.yml
data/: README.md
docs/: RELEASING.md  index.md
docs/_hooks/: copy_notebooks.py
docs/architecture/: api-stability.md  benchmarks.md  free-energy.md  overview.md  roadmap.md
docs/cookbook/: absolute-binding-fep.md  caching-results.md  choosing-docking.md  choosing-folding.md  choosing-generative.md  design-then-refold.md  end-to-end.md  fetch-and-search.md  folding-then-docking.md  folding.md  index.md  inspect-provenance.md  md-and-rmsd.md  multi-component-folding.md  prep-for-md.md  rank-binders-fep.md  ranking-binders.md  small-molecules.md  validating-structures.md
docs/examples/: .gitkeep  index.md
docs/getting-started/: installation.md  migrating.md  quickstart.md
docs/guide/: data-model.md  design.md  ensembles.md  io.md  plugins.md  reproducibility.md  scoring.md  validation.md  wrappers.md
docs/overrides/: main.html
docs/reference/: cache.md  chem.md  core.md  design.md  docking.md  ensembles.md  freeenergy.md  io.md  md.md  metrics.md  ml.md  parallel.md  plugins.md  prep.md  reproducibility.md  scoring.md  sequence.md  structure.md  validation.md  wrappers.md
docs/reference/wrappers/: docking.md  folding.md  freeenergy.md  generative.md  md.md  pockets.md
docs/source/: index.md
docs/stylesheets/: extra.css
docs/walkthroughs/: .gitkeep
notebooks/: README.md
notebooks/examples/: cross_engine_validation.ipynb  de_novo_design.ipynb  end_to_end_design.ipynb
notebooks/walkthroughs/: 01_sequences.ipynb  02_structures.ipynb  03_md_simulations.ipynb  04_docking.ipynb  05_ml_featurization.ipynb  06_plugin_authoring.ipynb
paper/: paper.bib  paper.md
plugins/: README.md
plugins/example_plugin/: README.md  pyproject.toml
plugins/example_plugin/src/example_plugin/: __init__.py
requirements/: README.md  base.txt  dev.txt  docking.txt  docs.txt  io.txt  md.txt  ml.txt  sequence.txt  structure.txt
scripts/: README.md  bump_version.py  execute_notebooks.py
src/biocore/: __init__.py
src/biocore/core/: __init__.py  atom.py  atom_array.py  chain.py  constants.py  protein.py  residue.py
src/biocore/docking/: __init__.py
src/biocore/io/: __init__.py  dispatch.py  fasta.py  mmcif.py  mol2.py  pdb.py  sdf.py
src/biocore/md/: __init__.py
src/biocore/metrics/: __init__.py
src/biocore/ml/: __init__.py
src/biocore/plugins/: __init__.py  registry.py
src/biocore/sequence/: __init__.py
src/biocore/wrappers/: __init__.py
src/molforge/: __init__.py  cache.py  design.py  folding.py  generative.py  parallel.py  reproducibility.py
src/molforge/chem/: __init__.py  dataset.py  descriptors.py  quality.py  standardize.py
src/molforge/core/: __init__.py  _rdkit.py  atom.py  atom_array.py  chain.py  metadata_keys.py  molecule.py  protein.py  provenance.py  residue.py
src/molforge/docking/: __init__.py
src/molforge/ensembles/: __init__.py  clustering.py  consensus.py  cross_engine.py  density.py  geometry.py  weighting.py
src/molforge/freeenergy/: __init__.py
src/molforge/io/: __init__.py  chembl.py  dispatch.py  mmcif.py  mol2.py  molecules.py  pdb.py  pdb_alphafold.py  pdbqt.py  pqr.py  rcsb_search.py  sdf.py  trajectory.py
src/molforge/md/: __init__.py
src/molforge/metrics/: __init__.py  dockq.py  gdt.py  lddt.py  tm.py
src/molforge/ml/: __init__.py  embeddings.py  graph.py  sequence_features.py  structure_features.py
src/molforge/plugins/: __init__.py  registry.py
src/molforge/prep/: __init__.py  _deps.py  _provenance.py  clean.py  fix.py  pipeline.py  protonate.py
src/molforge/scoring/: __init__.py  _base.py  scorers.py
src/molforge/sequence/: __init__.py  alignment.py  composition.py  matrices.py  mutations.py
src/molforge/structure/: __init__.py  bond_geometry.py  chirality.py  clashes.py  contacts.py  dihedrals.py  dssp.py  geometry.py  rmsd.py  sasa.py  superposition.py
src/molforge/validation/: __init__.py  criteria.py  orchestration.py  quality.py  verdict.py
src/molforge/wrappers/: __init__.py  _versions.py
tests/: conftest.py
tests/benchmarks/: conftest.py  test_perf.py
tests/fixtures/cif/: dipeptide.cif
tests/fixtures/fasta/: multiline_with_digits.fasta  simple.fasta
tests/integration/: test_fixtures.py  test_real_fixtures.py  test_smoke.py
tests/unit/: test_cache.py  test_design.py  test_docstrings.py  test_end_to_end.py  test_folding.py  test_parallel.py  test_reproducibility.py  test_scoring.py  test_typing.py
tests/unit/chem/: test_dataset.py  test_descriptors.py  test_quality.py  test_standardize.py
tests/unit/core/: test_atom_array.py  test_constants.py  test_core_smoke.py  test_core_types.py  test_hierarchy.py  test_metadata_keys.py  test_molecule.py  test_provenance.py  test_typing.py
tests/unit/docking/: test_docking_smoke.py
tests/unit/ensembles/: conftest.py  test_clustering.py  test_consensus.py  test_cross_engine.py  test_density.py  test_geometry.py  test_smoke.py  test_weighting.py
tests/unit/freeenergy/: test_types.py
tests/unit/io/: test_alphafold.py  test_chembl.py  test_dispatch.py  test_fasta.py  test_io_smoke.py  test_mmcif.py  test_mol2.py  test_molecules.py  test_pdb.py  test_pdbqt.py  test_pqr.py  test_rcsb_search.py  test_sdf.py  test_trajectory.py
tests/unit/md/: test_md_smoke.py
tests/unit/metrics/: test_dockq.py  test_gdt.py  test_lddt.py  test_metrics_smoke.py  test_tm.py
tests/unit/ml/: test_embeddings.py  test_graph.py  test_ml_smoke.py  test_sequence_features.py  test_structure_features.py
tests/unit/plugins/: test_example_plugin.py  test_plugins_smoke.py  test_registry.py
tests/unit/prep/: test_clean.py  test_fix.py  test_pipeline.py  test_protonate.py
(+96 files in other folders)
