[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "molforge-example-plugin"
version = "0.0.1"
description = "Reference plugin for molforge — registers a no-op example engine."
requires-python = ">=3.10"
dependencies = ["molforge"]

[project.entry-points."molforge.plugins"]
example = "example_plugin:register"

[tool.hatch.build.targets.wheel]
packages = ["src/example_plugin"]
